Book: full_name to fullname and last_name to lastname #time 10m

--- a/bootcamp/2020-bootcamp-zjazd2-dzien2.ipynb
+++ b/bootcamp/2020-bootcamp-zjazd2-dzien2.ipynb
@@ -540,13 +540,13 @@
     "\n",
     "\n",
     "twardowski = Astronaut()\n",
-    "twardowski.first_name = 'Jan'\n",
-    "twardowski.last_name = 'Twardowski'\n",
+    "twardowski.firstname = 'Jan'\n",
+    "twardowski.lastname = 'Twardowski'\n",
     "twardowski.date_of_birth = '1961-04-12'\n",
     "\n",
     "watney = Astronaut()\n",
-    "watney.first_name = 'Mark'\n",
-    "watney.last_name = 'Watney'\n",
+    "watney.firstname = 'Mark'\n",
+    "watney.lastname = 'Watney'\n",
     "watney.date_of_birth = '1969-07-21'\n",
     "\n",
     "esa = SpaceAgency()\n",
@@ -639,8 +639,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'Jan', 'last_name': 'Twardowski', 'date_of_birth': '1961-04-12'}\n",
-      "{'first_name': 'Mark', 'last_name': 'Watney', 'date_of_birth': '1969-07-21'}\n",
+      "{'firstname': 'Jan', 'lastname': 'Twardowski', 'date_of_birth': '1961-04-12'}\n",
+      "{'firstname': 'Mark', 'lastname': 'Watney', 'date_of_birth': '1969-07-21'}\n",
       "{'short_name': 'ESA', 'long_name': 'European Space Agency', 'location': 'Europe'}\n",
       "{'short_name': 'NASA', 'long_name': 'National Aeronautics and Space Administration', 'location': 'USA'}\n",
       "{'short_name': 'POLSA', 'long_name': 'Polish Space Agency', 'location': 'Poland'}\n"
@@ -649,9 +649,9 @@
    ],
    "source": [
     "class Astronaut:\n",
-    "    def __init__(self, first_name, last_name, date_of_birth):\n",
-    "        self.first_name = first_name\n",
-    "        self.last_name = last_name\n",
+    "    def __init__(self, firstname, lastname, date_of_birth):\n",
+    "        self.firstname = firstname\n",
+    "        self.lastname = lastname\n",
     "        self.date_of_birth = date_of_birth\n",
     "\n",
     "\n",
